--- a/RedditorMatch.ipynb
+++ b/RedditorMatch.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
@@ -654,24 +654,36 @@
     "    \n",
     "    matrix = tf.fit_transform(comments)\n",
     "    features = tf.get_feature_names()\n",
-    "    topFeatures = top_feats_in_doc(matrix, features, 1)\n",
+    "    \n",
+    "    yourTopFeatures = top_feats_in_doc(matrix, features, 0).sort_values(\"tfidf\", ascending = False)\n",
+    "    otherTopFeatures = top_feats_in_doc(matrix, features, 1).sort_values(\"tfidf\", ascending = False)\n",
     "        \n",
-    "    return(topFeatures)"
+    "    return(yourTopFeatures, otherTopFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------ Retrieved 239 comments for: thegoldenmoon\n",
-      "------ Retrieved 276 comments for: ohai123456789\n"
+      "------ Retrieved 1079 comments for: wingzeromkii\n",
+      "------ Retrieved 1931 comments for: PrancingPeach\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "yourTopFeatures, otherTopFeatures = getMatchedFeatures(\"wingzeromkii\", \"PrancingPeach\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -700,188 +712,368 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>im</td>\n",
-       "      <td>0.304507</td>\n",
+       "      <td>like</td>\n",
+       "      <td>0.262544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>just</td>\n",
-       "      <td>0.195430</td>\n",
+       "      <td>0.253792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>austin</td>\n",
-       "      <td>0.154526</td>\n",
+       "      <td>im</td>\n",
+       "      <td>0.208285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>like</td>\n",
-       "      <td>0.131802</td>\n",
+       "      <td>pretty</td>\n",
+       "      <td>0.190782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>thanks</td>\n",
-       "      <td>0.104532</td>\n",
+       "      <td>time</td>\n",
+       "      <td>0.187281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>http</td>\n",
-       "      <td>0.095815</td>\n",
+       "      <td>game</td>\n",
+       "      <td>0.183781</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>know</td>\n",
-       "      <td>0.095443</td>\n",
+       "      <td>think</td>\n",
+       "      <td>0.141774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>time</td>\n",
-       "      <td>0.090898</td>\n",
+       "      <td>dont</td>\n",
+       "      <td>0.131272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>dont</td>\n",
-       "      <td>0.090898</td>\n",
+       "      <td>people</td>\n",
+       "      <td>0.126021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>work</td>\n",
-       "      <td>0.086353</td>\n",
+       "      <td>really</td>\n",
+       "      <td>0.115519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>really</td>\n",
-       "      <td>0.086353</td>\n",
+       "      <td>ive</td>\n",
+       "      <td>0.113769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>think</td>\n",
-       "      <td>0.086353</td>\n",
+       "      <td>good</td>\n",
+       "      <td>0.101517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>engineering</td>\n",
-       "      <td>0.083040</td>\n",
+       "      <td>bit</td>\n",
+       "      <td>0.098016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>industry</td>\n",
-       "      <td>0.083040</td>\n",
+       "      <td>know</td>\n",
+       "      <td>0.096266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>good</td>\n",
-       "      <td>0.081808</td>\n",
+       "      <td>actually</td>\n",
+       "      <td>0.096266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>people</td>\n",
-       "      <td>0.077263</td>\n",
+       "      <td>make</td>\n",
+       "      <td>0.092765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>youre</td>\n",
-       "      <td>0.072718</td>\n",
+       "      <td>work</td>\n",
+       "      <td>0.089265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>scene</td>\n",
-       "      <td>0.070264</td>\n",
+       "      <td>youre</td>\n",
+       "      <td>0.087515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>software</td>\n",
-       "      <td>0.070264</td>\n",
+       "      <td>new</td>\n",
+       "      <td>0.082264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>love</td>\n",
-       "      <td>0.068173</td>\n",
+       "      <td>id</td>\n",
+       "      <td>0.082264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>actually</td>\n",
-       "      <td>0.068173</td>\n",
+       "      <td>thats</td>\n",
+       "      <td>0.078763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>lol</td>\n",
-       "      <td>0.068173</td>\n",
+       "      <td>way</td>\n",
+       "      <td>0.078763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>data</td>\n",
-       "      <td>0.063877</td>\n",
+       "      <td>sure</td>\n",
+       "      <td>0.078763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>tech</td>\n",
-       "      <td>0.063877</td>\n",
+       "      <td>arsenal</td>\n",
+       "      <td>0.078719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>right</td>\n",
-       "      <td>0.063628</td>\n",
+       "      <td>got</td>\n",
+       "      <td>0.077013</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        feature     tfidf\n",
-       "0            im  0.304507\n",
-       "1          just  0.195430\n",
-       "2        austin  0.154526\n",
-       "3          like  0.131802\n",
-       "4        thanks  0.104532\n",
-       "5          http  0.095815\n",
-       "6          know  0.095443\n",
-       "7          time  0.090898\n",
-       "8          dont  0.090898\n",
-       "9          work  0.086353\n",
-       "10       really  0.086353\n",
-       "11        think  0.086353\n",
-       "12  engineering  0.083040\n",
-       "13     industry  0.083040\n",
-       "14         good  0.081808\n",
-       "15       people  0.077263\n",
-       "16        youre  0.072718\n",
-       "17        scene  0.070264\n",
-       "18     software  0.070264\n",
-       "19         love  0.068173\n",
-       "20     actually  0.068173\n",
-       "21          lol  0.068173\n",
-       "22         data  0.063877\n",
-       "23         tech  0.063877\n",
-       "24        right  0.063628"
+       "     feature     tfidf\n",
+       "0       like  0.262544\n",
+       "1       just  0.253792\n",
+       "2         im  0.208285\n",
+       "3     pretty  0.190782\n",
+       "4       time  0.187281\n",
+       "5       game  0.183781\n",
+       "6      think  0.141774\n",
+       "7       dont  0.131272\n",
+       "8     people  0.126021\n",
+       "9     really  0.115519\n",
+       "10       ive  0.113769\n",
+       "11      good  0.101517\n",
+       "12       bit  0.098016\n",
+       "13      know  0.096266\n",
+       "14  actually  0.096266\n",
+       "15      make  0.092765\n",
+       "16      work  0.089265\n",
+       "17     youre  0.087515\n",
+       "18       new  0.082264\n",
+       "19        id  0.082264\n",
+       "20     thats  0.078763\n",
+       "21       way  0.078763\n",
+       "22      sure  0.078763\n",
+       "23   arsenal  0.078719\n",
+       "24       got  0.077013"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getMatchedFeatures(\"thegoldenmoon\", \"ohai123456789\", r)"
+    "yourTopFeatures.head(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>tfidf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>just</td>\n",
+       "      <td>0.360814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>like</td>\n",
+       "      <td>0.244423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>think</td>\n",
+       "      <td>0.241737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>people</td>\n",
+       "      <td>0.239498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dont</td>\n",
+       "      <td>0.236812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>really</td>\n",
+       "      <td>0.188465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>im</td>\n",
+       "      <td>0.166530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>game</td>\n",
+       "      <td>0.155338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>youre</td>\n",
+       "      <td>0.149519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>actually</td>\n",
+       "      <td>0.145937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>thats</td>\n",
+       "      <td>0.125793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>time</td>\n",
+       "      <td>0.111467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>way</td>\n",
+       "      <td>0.110124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>going</td>\n",
+       "      <td>0.102962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>know</td>\n",
+       "      <td>0.088189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>pretty</td>\n",
+       "      <td>0.088189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>lot</td>\n",
+       "      <td>0.088189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>make</td>\n",
+       "      <td>0.087741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>want</td>\n",
+       "      <td>0.087294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>didnt</td>\n",
+       "      <td>0.083265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>doesnt</td>\n",
+       "      <td>0.080131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>right</td>\n",
+       "      <td>0.077445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>point</td>\n",
+       "      <td>0.076102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>did</td>\n",
+       "      <td>0.074759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>say</td>\n",
+       "      <td>0.069387</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     feature     tfidf\n",
+       "0       just  0.360814\n",
+       "1       like  0.244423\n",
+       "2      think  0.241737\n",
+       "3     people  0.239498\n",
+       "4       dont  0.236812\n",
+       "5     really  0.188465\n",
+       "6         im  0.166530\n",
+       "7       game  0.155338\n",
+       "8      youre  0.149519\n",
+       "9   actually  0.145937\n",
+       "10     thats  0.125793\n",
+       "11      time  0.111467\n",
+       "12       way  0.110124\n",
+       "13     going  0.102962\n",
+       "14      know  0.088189\n",
+       "15    pretty  0.088189\n",
+       "16       lot  0.088189\n",
+       "17      make  0.087741\n",
+       "18      want  0.087294\n",
+       "19     didnt  0.083265\n",
+       "20    doesnt  0.080131\n",
+       "21     right  0.077445\n",
+       "22     point  0.076102\n",
+       "23       did  0.074759\n",
+       "24       say  0.069387"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "otherTopFeatures.head(50)"
+   ]
   },
   {
    "cell_type": "code",
