--- a/ScrapeComments.ipynb
+++ b/ScrapeComments.ipynb
@@ -7239,7 +7239,27 @@
       "------ Retrieved 1031 comments for: OG-buddha\n",
       "------ Retrieved 692 comments for: Alpa_Cino\n",
       "------ Retrieved 919 comments for: Smoda\n",
-      "------ Retrieved 238 comments for: SpittaRansghetti\n"
+      "------ Retrieved 238 comments for: SpittaRansghetti\n",
+      "------ Retrieved 349 comments for: ChicagoTom\n",
+      "------ Retrieved 1786 comments for: clwu\n",
+      "------ Retrieved 1001 comments for: MaxFreedomMoussa\n",
+      "------ Retrieved 1860 comments for: a_junebug\n",
+      "------ Retrieved 1596 comments for: Brittlestyx\n",
+      "------ Retrieved 1667 comments for: jiggabot\n",
+      "------ Retrieved 1704 comments for: liverstealer\n",
+      "------ Retrieved 1774 comments for: ThorneLea\n",
+      "------ Retrieved 847 comments for: pappazeuss\n",
+      "------ Retrieved 341 comments for: labek\n",
+      "------ Retrieved 474 comments for: guth86\n",
+      "------ Retrieved 1932 comments for: Harbinger147\n",
+      "------ Retrieved 533 comments for: PeachesTheApache\n",
+      "------ Retrieved 1523 comments for: bpo1987\n",
+      "------ Retrieved 1696 comments for: Unoriginal_Pseudonym\n",
+      "------ Retrieved 1702 comments for: EarnMoneySitting\n",
+      "------ Retrieved 1179 comments for: wardepartment\n",
+      "------ Retrieved 1169 comments for: PrairieData\n",
+      "------ Retrieved 1228 comments for: quizzicalquow\n",
+      "------ Retrieved 923 comments for: ScottRaymond\n"
      ]
     }
    ],
