--- a/RedditorMatch.ipynb
+++ b/RedditorMatch.ipynb
@@ -655,6 +655,9 @@
     "    matrix = tf.fit_transform(comments)\n",
     "    features = tf.get_feature_names()\n",
     "    \n",
+    "    ## DON'T COMBINE THEM TO ONE LONG COMMENT. \n",
+    "    ## USE EACH POST AS A SEPARATE COMMENT\n",
+    "    \n",
     "    yourTopFeatures = top_feats_in_doc(matrix, features, 0).sort_values(\"tfidf\", ascending = False)\n",
     "    otherTopFeatures = top_feats_in_doc(matrix, features, 1).sort_values(\"tfidf\", ascending = False)\n",
     "        \n",
