--- a/ScrapeComments.ipynb
+++ b/ScrapeComments.ipynb
@@ -7680,7 +7680,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -11384,7 +11386,12 @@
       "------ Retrieved 1799 comments for: flower1988\n",
       "------ Retrieved 1537 comments for: PyrollisAhFiros\n",
       "------ Retrieved 1639 comments for: ParticleCannon\n",
-      "------ Retrieved 246 comments for: myvisbetterthan\n"
+      "------ Retrieved 246 comments for: myvisbetterthan\n",
+      "------ Retrieved 1929 comments for: klaq\n",
+      "------ Retrieved 1475 comments for: tb03102\n",
+      "------ Retrieved 669 comments for: manfon\n",
+      "Failed...moving on...\n",
+      "------ Retrieved 1758 comments for: everadvancing\n"
      ]
     }
    ],
