--- a/RedditAnalysis.ipynb
+++ b/RedditAnalysis.ipynb
@@ -150,6 +150,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
@@ -1303,6 +1312,212 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ Retrieved 276 comments for: ohai123456789\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>tfidf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>thank</td>\n",
+       "      <td>0.019929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>thi</td>\n",
+       "      <td>0.014805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>austin</td>\n",
+       "      <td>0.011576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>lol</td>\n",
+       "      <td>0.010283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>im</td>\n",
+       "      <td>0.009804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>agre</td>\n",
+       "      <td>0.008392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>haha</td>\n",
+       "      <td>0.008361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>wa</td>\n",
+       "      <td>0.007410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>industri</td>\n",
+       "      <td>0.006417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>good</td>\n",
+       "      <td>0.005814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>school</td>\n",
+       "      <td>0.005790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>chef</td>\n",
+       "      <td>0.005690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>engin</td>\n",
+       "      <td>0.005582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>http</td>\n",
+       "      <td>0.005413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>total</td>\n",
+       "      <td>0.005365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>awesom</td>\n",
+       "      <td>0.005348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>pretti</td>\n",
+       "      <td>0.005215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>total agre</td>\n",
+       "      <td>0.005130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>love</td>\n",
+       "      <td>0.005090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>work</td>\n",
+       "      <td>0.005011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>hear</td>\n",
+       "      <td>0.004963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>like</td>\n",
+       "      <td>0.004872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>look</td>\n",
+       "      <td>0.004838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>thing</td>\n",
+       "      <td>0.004812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>pm</td>\n",
+       "      <td>0.004762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       feature     tfidf\n",
+       "0        thank  0.019929\n",
+       "1          thi  0.014805\n",
+       "2       austin  0.011576\n",
+       "3          lol  0.010283\n",
+       "4           im  0.009804\n",
+       "5         agre  0.008392\n",
+       "6         haha  0.008361\n",
+       "7           wa  0.007410\n",
+       "8     industri  0.006417\n",
+       "9         good  0.005814\n",
+       "10      school  0.005790\n",
+       "11        chef  0.005690\n",
+       "12       engin  0.005582\n",
+       "13        http  0.005413\n",
+       "14       total  0.005365\n",
+       "15      awesom  0.005348\n",
+       "16      pretti  0.005215\n",
+       "17  total agre  0.005130\n",
+       "18        love  0.005090\n",
+       "19        work  0.005011\n",
+       "20        hear  0.004963\n",
+       "21        like  0.004872\n",
+       "22        look  0.004838\n",
+       "23       thing  0.004812\n",
+       "24          pm  0.004762"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top = getTopFeatures(\"ohai123456789\", r)\n",
+    "top"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1804,7 +2019,8 @@
    "outputs": [],
    "source": [
     "# for the validation visualizations, use D3.js\n",
-    "# create word bubbles for both users (bigger = more comments posted)\n"
+    "# create word bubbles for both users (bigger = more comments posted)\n",
+    "# check the favorites on DS"
    ]
   },
   {
