--- a/Reddit Matching Logic and Analysis.ipynb
+++ b/Reddit Matching Logic and Analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jacky Zhao\\Anaconda3\\lib\\site-packages\\nltk\\twitter\\__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\"The twython library has not been installed. \"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -109,21 +118,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ***find_similar():*** Takes in the TFIDF matrix (matrix), the index of the document that you want to match against (index), and the number of results to be displayed (top_n / optional). 6 is chosen as the default for top_n because we're really only interested in the top 5 matched redditors. However, your own username might be chosen as well because well....your comments are very similar to your own comments and thus would have the highest score. The similarity is calculated using the cosine similarity.\n",
-    "\n",
-    "* ***getDf():*** Takes in the string of the subreddit name and retrieves the scraped comments from the appropriate csv file. \n",
-    "\n",
-    "* ***stem():*** Takes in a corpus and returns a stemmed corpus. It first tokenizes and stems each word before putting it back together as a single document. \n",
-    "\n",
-    "* ***findMatches():*** Takes in your username (string), subreddit name (string), and reddit API instance. It calls getDf() to retrieve the scraped comments and applies it to a corpus of comments. It then calls one of the helper functions that I wrote (getUserComments()) to gather the comments of the input username and then prepends it onto the corpus array. It then builds the TFIDF vectorizer with the n_gram specificity of 1 to 3 words. In addition, I'm adding more stopwords into the mix. Once we fit and transform the corpus to get the matrix, we call \"find_similar()\" to retrieve the top 5 matched usernames. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -146,13 +142,13 @@
     "def getDf(subreddit_name):\n",
     "    filePath = \"data/\" + subreddit_name + \".csv\"\n",
     "    df = pd.read_csv(filePath, encoding = \"ISO-8859-1\")\n",
-    "    print(\"--- Retrieved\", len(df), \"corpuses/corpi(?) for\", subreddit_name)\n",
+    "    print(\"--- Retrieved\", len(df), \"corpuses for r/\", subreddit_name)\n",
     "    return(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -188,11 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def findMatches(your_username, subreddit_name, redditInstance):\n",
+    "def createCorpus(your_username, subreddit_name, redditInstance):\n",
     "    corpus = []    \n",
     "    corpusDf = getDf(subreddit_name)\n",
     "    corpusDf[\"Comments\"].apply(lambda row: corpus.append(str(row)))\n",
@@ -204,18 +202,42 @@
     "    your_comments = \" \".join(your_comments)\n",
     "    \n",
     "    corpus.insert(0, your_comments)\n",
-    "    \n",
-    "    print(\"--- Creating Tfidf vector...\")\n",
-    "    \n",
+    "    return(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def createTfidfMatrix(corpus):\n",
     "    myStopWords = stopwords.words('english')\n",
     "    myStopWords = text.ENGLISH_STOP_WORDS.union(myStopWords)\n",
     "    \n",
+    "    print(\"--- Creating Tfidf vectorizor...\")\n",
     "    tf = TfidfVectorizer(analyzer = \"word\", max_df = 0.8, min_df = 0.2, \n",
     "                            ngram_range = (1, 3),\n",
     "                            stop_words = myStopWords)\n",
     "    \n",
     "    print(\"--- Fitting the matrix...\")\n",
     "    matrix = tf.fit_transform(corpus)\n",
+    "    return(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMatches(your_username, subreddit_name, redditInstance):    \n",
+    "    corpus = createCorpus(your_username, subreddit_name, redditInstance)\n",
+    "    matrix = createTfidfMatrix(corpus)\n",
+    "    corpusDf = getDf(subreddit_name)\n",
+    "    \n",
     "    results = []\n",
     "    \n",
     "    for index, score in find_similar(matrix, 0):        \n",
@@ -241,7 +263,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Retrieved 288 corpuses for r/ mizzou\n",
+      "------ Stemming the words\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: I'm displaying the top 6 usernames who are similar. \n",
     "# I chose 6 because if the username is contained in my scraped dataset, \n",
@@ -789,6 +820,50 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "getCommonFeatures(\"Max_W_\", \"EveryTrueSon\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "getCommonFeatures(\"Max_W_\", \"Apatches\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "getCommonFeatures(\"Max_W_\", \"BransonBombshell\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "getCommonFeatures(\"Max_W_\", \"SovreignTripod\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
@@ -983,10 +1058,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "plotTopSentiments(\"Max_W_\", r)"
+    "plotSentiment(\"BrettGilpin\", \"mizzou\", r)"
    ]
   },
   {
@@ -997,8 +1074,112 @@
    },
    "outputs": [],
    "source": [
+    "plotSentiment(\"EveryTrueSon\", \"mizzou\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotSentiment(\"Apatches\", \"mizzou\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotSentiment(\"BransonBombshell\", \"mizzou\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotSentiment(\"SovreignTripod\", \"mizzou\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotTopSentiments(\"Max_W_\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plotTopSentiments(\"BrettGilpin\", r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotTopSentiments(\"EveryTrueSon\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotTopSentiments(\"Apatches\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotTopSentiments(\"BransonBombshell\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plotTopSentiments(\"SovreignTripod\", r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1079,7 +1260,7 @@
     "collapsed": true
    },
    "source": [
-    "## K-means clustering"
+    "## Hierarchical document clustering"
    ]
   },
   {
@@ -1089,7 +1270,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "corpus = createCorpus(\"Max_W_\", scraped_subreddits[0], r)\n",
+    "matrix = createTfidfMatrix(corpus)\n",
+    "dist = 1 - cosine_similarity(matrix)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1098,34 +1285,26 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "linkage_matrix = ward(dist) #define the linkage_matrix using ward clustering pre-computed distances\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 20)) # set size\n",
+    "ax = dendrogram(linkage_matrix, orientation=\"right\", labels=\"titles\");\n",
+    "\n",
+    "plt.tick_params(\\\n",
+    "    axis= 'x',          # changes apply to the x-axis\n",
+    "    which='both',      # both major and minor ticks are affected\n",
+    "    bottom='off',      # ticks along the bottom edge are off\n",
+    "    top='off',         # ticks along the top edge are off\n",
+    "    labelbottom='off')\n",
+    "\n",
+    "plt.tight_layout() #show plot with tight layout\n",
+    "\n",
+    "#uncomment below to save figure\n",
+    "plt.savefig('ward_clusters.png', dpi=200) #save figure as ward_clusters\n",
+    "\n",
+    "plt.close()"
+   ]
   },
   {
    "cell_type": "code",
