--- a/Reddit Matching Logic and Analysis.ipynb
+++ b/Reddit Matching Logic and Analysis.ipynb
@@ -78,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CLIENT_ID = creds.client_id()\n",
@@ -94,25 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Specify the scraped datasets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Unfortunately, it takes quite some time to retrieve user comments from a particular subreddit. Remember, we're going into a specified subreddit, finding a list of users who posted, and then scraping out every single comment that those users made in the past. In order to remove this bottleneck from my demonstration, I have scraped the comments from users who have posted on r/mizzou. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "scraped_subreddits = [\"mizzou\"]"
    ]
   },
   {
@@ -235,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def findMatches(your_username, subreddit_name, redditInstance):    \n",
@@ -313,7 +299,7 @@
     "# then that username will always show up as most similar. \n",
     "# But we really only care about the top 5 usernames. \n",
     "\n",
-    "matches = findMatches(\"Max_W_\", scraped_subreddits[0], r)"
+    "matches = findMatches(\"Max_W_\", \"mizzou\", r)"
    ]
   },
   {
@@ -1540,7 +1526,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getCommonFeatures(user1, user2, redditInstance):\n",
@@ -3016,7 +3004,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# NOTE: plot a cumulative chart of sentiment"
@@ -3080,7 +3070,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#jsonObj = buildCollapsible(\"Max_W_\", \"mizzou\", r)"
@@ -3098,7 +3090,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def buildDendo(your_username, subreddit_name, redditInstance, top_n = 50):\n",
